feat: Add RSS feed TTL input and enhance settings layout with new hints

--- a/public/admin/lang/de.json
+++ b/public/admin/lang/de.json
@@ -90,6 +90,9 @@
     "rssSection": "RSS Feed",
     "rssEnable": "RSS Feed aktivieren",
     "rssFeedUrl": "Feed URL",
+    "rssFeedUrlHint": "Ihr generierter RSS Feed",
+    "rssSettingsSection": "EINSTELLUNGEN",
+    "rssSettingsHint": "Feed-Konfiguration und Metadaten",
     "rssCopy": "Kopieren",
     "rssCopySuccess": "Feed-URL kopiert",
     "rssCopyError": "Kopieren fehlgeschlagen",
