--- a/public/admin/lang/en.json
+++ b/public/admin/lang/en.json
@@ -90,6 +90,9 @@
     "rssSection": "RSS Feed",
     "rssEnable": "Enable RSS feed",
     "rssFeedUrl": "Feed URL",
+    "rssFeedUrlHint": "Your generated RSS feed",
+    "rssSettingsSection": "SETTINGS",
+    "rssSettingsHint": "Feed configuration and metadata",
     "rssCopy": "Copy",
     "rssCopySuccess": "Feed URL copied",
     "rssCopyError": "Copy failed",
