feat: Enhance bloglist functionality with limit and archive link options in editor

--- a/public/admin/lang/de.json
+++ b/public/admin/lang/de.json
@@ -226,6 +226,8 @@
     "blockList": "Liste",
     "blockDivider": "Trenner",
     "blockBloglist": "Blogliste",
+    "bloglistLimitLabel": "Posts begrenzen",
+    "bloglistArchiveLabel": "Archiv-Link anzeigen",
     "preview": "Vorschau",
     "bytes": "Bytes",
     "limit": "Limit",
