--- a/public/admin/lang/en.json
+++ b/public/admin/lang/en.json
@@ -226,6 +226,8 @@
     "blockList": "List",
     "blockDivider": "Divider",
     "blockBloglist": "Bloglist",
+    "bloglistLimitLabel": "Limit posts",
+    "bloglistArchiveLabel": "Show archive link",
     "preview": "Preview",
     "bytes": "Bytes",
     "limit": "Limit",
