feat: Add language and homepage labels in settings for improved UI clarity

--- a/public/admin/lang/de.json
+++ b/public/admin/lang/de.json
@@ -44,8 +44,10 @@
   },
   "settings": {
     "language": "Sprache",
+    "languageLabel": "Sprache",
     "languageHint": "Änderungen erfordern Seiten-Neuladen",
     "homepage": "Startseite",
+    "homepageLabel": "Startseite",
     "homepageHint": "Wähle eine Seite, die als Startseite (/) angezeigt werden soll",
     "homepageDefault": "— Keine Homepage ausgewählt —",
     "homepageRegenerate": "Aktualisieren",
