feat: Rename factory reset to full reset and update related functionality and translations

--- a/public/admin/lang/de.json
+++ b/public/admin/lang/de.json
@@ -145,10 +145,10 @@
     "deleteAllConfirm": "Wirklich ALLE Artikel unwiderruflich löschen? Diese Aktion kann nicht rückgängig gemacht werden!",
     "deleteAllConfirm2": "Bist du sicher? Alle Artikel werden gelöscht!",
     "deleteAllSuccess": "{{count}} Artikel gelöscht",
-    "factoryReset": "Werkseinstellungen",
-    "factoryResetConfirm": "Wirklich auf Werkseinstellungen zurücksetzen? ALLE Daten werden gelöscht!",
-    "factoryResetConfirm2": "LETZTE WARNUNG: Alle Artikel und Einstellungen werden unwiderruflich gelöscht!",
-    "factoryResetSuccess": "Zurückgesetzt auf Werkseinstellungen",
+    "fullReset": "Komplett zurücksetzen",
+    "fullResetConfirm": "Wirklich ALLES zurücksetzen? Alle Daten und das Passwort werden gelöscht!",
+    "fullResetConfirm2": "LETZTE WARNUNG: Alle Artikel, Einstellungen und das Admin-Passwort werden unwiderruflich gelöscht!",
+    "fullResetSuccess": "System wurde komplett zurückgesetzt",
     "save": "Speichern",
     "discard": "Verwerfen",
     "discardConfirm": "Alle nicht gespeicherten Änderungen verwerfen?",
