--- a/public/admin/lang/en.json
+++ b/public/admin/lang/en.json
@@ -145,10 +145,10 @@
     "deleteAllConfirm": "Really delete ALL articles permanently? This action cannot be undone!",
     "deleteAllConfirm2": "Are you sure? All articles will be deleted!",
     "deleteAllSuccess": "{{count}} articles deleted",
-    "factoryReset": "Factory reset",
-    "factoryResetConfirm": "Really reset to factory settings? ALL data will be deleted!",
-    "factoryResetConfirm2": "LAST WARNING: All articles and settings will be permanently deleted!",
-    "factoryResetSuccess": "Reset to factory settings",
+    "fullReset": "Full reset",
+    "fullResetConfirm": "Really reset EVERYTHING? All data and the password will be deleted!",
+    "fullResetConfirm2": "LAST WARNING: All articles, settings, and the admin password will be permanently deleted!",
+    "fullResetSuccess": "System has been completely reset",
     "save": "Save",
     "discard": "Discard",
     "discardConfirm": "Discard all unsaved changes?",
