feat: Implement audit logging system with UI integration for viewing and managing logs

--- a/public/admin/lang/de.json
+++ b/public/admin/lang/de.json
@@ -23,7 +23,8 @@
     "css": "CSS",
     "rss": "RSS",
     "data": "Daten",
-    "bloglist": "Bloglist"
+    "bloglist": "Bloglist",
+    "logs": "Logs"
   },
   "auth": {
     "password": "Passwort",
@@ -170,7 +171,33 @@
     "archiveRecompileConfirm": "Archiv-Seite \"/{{slug}}\" mit aktuellen Posts neu kompilieren?",
     "archiveRecompileSuccess": "Archiv-Seite erfolgreich rekompiliert!",
     "archiveRecompiling": "Kompiliere...",
-    "archiveRecompiled": "Rekompiliert"
+    "archiveRecompiled": "Rekompiliert",
+    "logsSection": "AUDIT-LOGS",
+    "logsSearch": "Suche...",
+    "logsFilterAll": "Alle Aktionen",
+    "logsRefresh": "Aktualisieren",
+    "logsExport": "Exportieren",
+    "logsClear": "Löschen",
+    "logsTime": "Zeit",
+    "logsAction": "Aktion",
+    "logsIP": "IP",
+    "logsDetails": "Details",
+    "logsLoading": "Lade Logs...",
+    "logsEmpty": "Keine Logs vorhanden",
+    "logsError": "Fehler beim Laden der Logs",
+    "logsCountDisplay": "{{filtered}} von {{total}} Einträgen",
+    "logsClearConfirm": "Audit-Logs wirklich löschen?\n\nEine Sicherungskopie wird automatisch erstellt.",
+    "logsClearSuccess": "Logs erfolgreich gelöscht",
+    "logsActionLoginSuccess": "Login erfolgreich",
+    "logsActionLoginFailed": "Login fehlgeschlagen",
+    "logsActionLogout": "Logout",
+    "logsActionSetupComplete": "Setup abgeschlossen",
+    "logsActionPostCreate": "Post erstellt",
+    "logsActionPostDelete": "Post gelöscht",
+    "logsActionPostsDeleteAll": "Alle Posts gelöscht",
+    "logsActionSettingsUpdate": "Einstellungen aktualisiert",
+    "logsActionFullReset": "System zurückgesetzt",
+    "logsActionCsrfFailure": "CSRF-Fehler"
   },
   "overhead": {
     "title": "Overhead",
