--- a/public/admin/lang/en.json
+++ b/public/admin/lang/en.json
@@ -23,7 +23,8 @@
     "css": "CSS",
     "rss": "RSS",
     "data": "Data",
-    "bloglist": "Bloglist"
+    "bloglist": "Bloglist",
+    "logs": "Logs"
   },
   "auth": {
     "password": "Password",
@@ -169,7 +170,33 @@
     "archiveRecompileConfirm": "Recompile archive page \"/{{slug}}\" with current posts?",
     "archiveRecompileSuccess": "Archive page recompiled successfully!",
     "archiveRecompiling": "Compiling...",
-    "archiveRecompiled": "Recompiled"
+    "archiveRecompiled": "Recompiled",
+    "logsSection": "AUDIT LOGS",
+    "logsSearch": "Search...",
+    "logsFilterAll": "All actions",
+    "logsRefresh": "Refresh",
+    "logsExport": "Export",
+    "logsClear": "Clear",
+    "logsTime": "Time",
+    "logsAction": "Action",
+    "logsIP": "IP",
+    "logsDetails": "Details",
+    "logsLoading": "Loading logs...",
+    "logsEmpty": "No logs available",
+    "logsError": "Error loading logs",
+    "logsCountDisplay": "{{filtered}} of {{total}} entries",
+    "logsClearConfirm": "Really delete audit logs?\n\nA backup will be created automatically.",
+    "logsClearSuccess": "Logs cleared successfully",
+    "logsActionLoginSuccess": "Login successful",
+    "logsActionLoginFailed": "Login failed",
+    "logsActionLogout": "Logout",
+    "logsActionSetupComplete": "Setup complete",
+    "logsActionPostCreate": "Post created",
+    "logsActionPostDelete": "Post deleted",
+    "logsActionPostsDeleteAll": "All posts deleted",
+    "logsActionSettingsUpdate": "Settings updated",
+    "logsActionFullReset": "System reset",
+    "logsActionCsrfFailure": "CSRF failure"
   },
   "overhead": {
     "title": "Overhead",
