feat: Update editor hints and logging icons; improve layout and styling for better UX

--- a/public/admin/lang/de.json
+++ b/public/admin/lang/de.json
@@ -54,8 +54,8 @@
     "homepageRegenerate": "Aktualisieren",
     "homepageRegenerateConfirm": "Startseite \"{{slug}}\" mit aktuellen Posts neu generieren?",
     "homepageRegenerateSuccess": "Startseite erfolgreich aktualisiert!",
-    "homepageRegenerating": "⏳ Generiere...",
-    "homepageRegenerated": "✓ Aktualisiert",
+    "homepageRegenerating": "Generiere...",
+    "homepageRegenerated": "Aktualisiert",
     "favicon": "Favicon",
     "faviconHint": "Kleines Icon das im Browser-Tab angezeigt wird (max. 4KB, wird als Base64 eingebettet)",
     "faviconNone": "Kein Favicon",
@@ -265,8 +265,8 @@
     "pageTypePage": "Seite",
     "blogTitle": "Blog-Titel",
     "browserTabTitle": "Browser-Tab-Titel",
-    "browserTabTitleHint": "✓ Nur Titel verwenden",
-    "browserTabTitleHintWithSite": "✓ Titel | Seitentitel",
+    "browserTabTitleHint": "Nur Titel verwenden",
+    "browserTabTitleHintWithSite": "Titel | Seitentitel",
     "templates": "Vorlagen",
     "templatesSelect": "Vorlage auswählen...",
     "templatesConfirm": "Vorlage wirklich laden? Aktueller Inhalt wird ersetzt.",
