--- a/public/admin/lang/en.json
+++ b/public/admin/lang/en.json
@@ -54,8 +54,8 @@
     "homepageRegenerate": "Regenerate",
     "homepageRegenerateConfirm": "Regenerate homepage \"{{slug}}\" with current posts?",
     "homepageRegenerateSuccess": "Homepage successfully updated!",
-    "homepageRegenerating": "⏳ Generating...",
-    "homepageRegenerated": "✓ Updated",
+    "homepageRegenerating": "Generating...",
+    "homepageRegenerated": "Updated",
     "favicon": "Favicon",
     "faviconHint": "Small icon displayed in the browser tab (max. 4KB, embedded as Base64)",
     "faviconNone": "No favicon",
@@ -264,8 +264,8 @@
     "pageTypePage": "Page",
     "blogTitle": "Blog Title",
     "browserTabTitle": "Browser Tab Title",
-    "browserTabTitleHint": "✓ Using title only",
-    "browserTabTitleHintWithSite": "✓ Title | Site Title",
+    "browserTabTitleHint": "Using title only",
+    "browserTabTitleHintWithSite": "Title | Site Title",
     "templates": "Templates",
     "templatesSelect": "Select template...",
     "templatesConfirm": "Really load template? Current content will be replaced.",
