Enhance admin login and setup experience - Updated password label to "Admin Password" in English language file. - Redesigned login page with improved layout, styles, and logo. - Added password visibility toggle feature in login and setup forms. - Improved password strength indicator with visual feedback. - Enhanced setup process with clearer instructions and error handling. - Changed API endpoint from /initialize to /install for better clarity. - Implemented auto-fix for data directory permissions during setup checks. - Removed redundant setup completion route and streamlined the installation process.

--- a/public/admin/lang/en.json
+++ b/public/admin/lang/en.json
@@ -27,7 +27,7 @@
     "logs": "Logs"
   },
   "auth": {
-    "password": "Password",
+    "password": "Admin Password",
     "passwordPlaceholder": "Enter password",
     "passwordConfirm": "Confirm password",
     "passwordConfirmPlaceholder": "Confirm password",
