feat: Add section block support with customizable properties and HTML sanitization

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -79,7 +79,7 @@
     "metaAuthorPlaceholder": "Max Mustermann",
     "footerSection": "Footer",
     "footerEnable": "Footer aktivieren",
-    "footerHint": "Footer-Text (HTML erlaubt, {{bytes}} für Byte-Anzeige)",
+    "footerHint": "Footer-Text (Sicheres HTML erlaubt: Text, Links. Keine Bilder/Skripte. {{bytes}} für Byte-Anzeige)",
     "footerBytesBtn": "{{bytes}}",
     "cssTemplates": "CSS Vorlagen",
     "cssEnable": "Globales CSS verwenden",
@@ -277,6 +277,17 @@
     "blockList": "Liste",
     "blockDivider": "Trenner",
     "blockBloglist": "Blogliste",
+    "blockSection": "Sektion",
+    "sectionBackground": "Hintergrund",
+    "sectionTextColor": "Textfarbe",
+    "sectionPattern": "Muster",
+    "sectionPatternNone": "Kein Muster",
+    "sectionPatternDots": "Punkte",
+    "sectionPatternGrid": "Gitter",
+    "sectionPatternStripes": "Streifen",
+    "sectionPatternCross": "Kreuzschraffur",
+    "sectionPatternHexagons": "Hexagone",
+    "sectionAddBlock": "+ Inneren Block hinzufügen",
     "bloglistPlaceholder": "Blog-Posts werden hier automatisch aufgelistet",
     "bloglistSettingsLink": "Konfigurieren unter Einstellungen → Bloglist",
     "preview": "Vorschau",
