--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -79,7 +79,7 @@
     "metaAuthorPlaceholder": "John Doe",
     "footerSection": "Footer",
     "footerEnable": "Enable footer",
-    "footerHint": "Footer text (HTML allowed, {{bytes}} for byte counter)",
+    "footerHint": "Footer text (Safe HTML allowed: text, links. No images/scripts. {{bytes}} for byte counter)",
     "footerBytesBtn": "{{bytes}}",
     "cssTemplates": "CSS Templates",
     "cssEnable": "Use global CSS",
@@ -276,6 +276,17 @@
     "blockList": "List",
     "blockDivider": "Divider",
     "blockBloglist": "Bloglist",
+    "blockSection": "Section",
+    "sectionBackground": "Background",
+    "sectionTextColor": "Text Color",
+    "sectionPattern": "Pattern",
+    "sectionPatternNone": "No Pattern",
+    "sectionPatternDots": "Dots",
+    "sectionPatternGrid": "Grid",
+    "sectionPatternStripes": "Stripes",
+    "sectionPatternCross": "Crosshatch",
+    "sectionPatternHexagons": "Hexagons",
+    "sectionAddBlock": "+ Add Inner Block",
     "bloglistPlaceholder": "Blog posts will be listed here automatically",
     "bloglistSettingsLink": "Configure in Settings → Bloglist",
     "preview": "Preview",
