feat: Add customizable page width and section width controls for improved layout flexibility

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -91,6 +91,8 @@
     "cssPreviewFor": "Vorschau für",
     "cssReadOnly": "(Nur lesen)",
     "cssCustomHint": "Eigene CSS-Regeln (werden in jede Seite eingebettet)",
+    "pageWidth": "Seitenbreite",
+    "pageWidthHint": "Body max-width überschreiben (z.B. 42rem, 800px, 90%)",
     "rssSection": "RSS Feed",
     "rssEnable": "RSS Feed aktivieren",
     "rssFeedUrl": "Feed URL",
@@ -287,6 +289,7 @@
     "sectionPatternStripes": "Streifen",
     "sectionPatternCross": "Kreuzschraffur",
     "sectionPatternHexagons": "Hexagone",
+    "sectionWidth": "Breite",
     "sectionAddBlock": "+ Inneren Block hinzufügen",
     "bloglistPlaceholder": "Blog-Posts werden hier automatisch aufgelistet",
     "bloglistSettingsLink": "Konfigurieren unter Einstellungen → Bloglist",
