--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -91,6 +91,8 @@
     "cssPreviewFor": "Preview for",
     "cssReadOnly": "(Read only)",
     "cssCustomHint": "Custom CSS rules (embedded in every page)",
+    "pageWidth": "Page Width",
+    "pageWidthHint": "Override body max-width (e.g. 42rem, 800px, 90%)",
     "rssSection": "RSS Feed",
     "rssEnable": "Enable RSS feed",
     "rssFeedUrl": "Feed URL",
@@ -286,6 +288,7 @@
     "sectionPatternStripes": "Stripes",
     "sectionPatternCross": "Crosshatch",
     "sectionPatternHexagons": "Hexagons",
+    "sectionWidth": "Width",
     "sectionAddBlock": "+ Add Inner Block",
     "bloglistPlaceholder": "Blog posts will be listed here automatically",
     "bloglistSettingsLink": "Configure in Settings → Bloglist",
