--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -290,6 +290,7 @@
     "sectionPatternCross": "Kreuzschraffur",
     "sectionPatternHexagons": "Hexagone",
     "sectionWidth": "Breite",
+    "sectionAlign": "Ausrichtung",
     "sectionAddBlock": "+ Inneren Block hinzufügen",
     "bloglistPlaceholder": "Blog-Posts werden hier automatisch aufgelistet",
     "bloglistSettingsLink": "Konfigurieren unter Einstellungen → Bloglist",
