--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -289,6 +289,7 @@
     "sectionPatternCross": "Crosshatch",
     "sectionPatternHexagons": "Hexagons",
     "sectionWidth": "Width",
+    "sectionPadding": "Padding",
     "sectionAlign": "Align",
     "sectionAddBlock": "+ Add Inner Block",
     "bloglistPlaceholder": "Blog posts will be listed here automatically",
