feat: Update editor functionality to preserve fields in edit mode and add recompile button text

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -300,6 +300,7 @@
     "limit": "Limit",
     "overLimit": "Über Limit!",
     "buildPublish": "Kompilieren & Veröffentlichen",
+    "recompile": "Rekompilieren",
     "buildConfirm": "Build ausführen und veröffentlichen?",
     "buildSuccess": "Erfolgreich veröffentlicht!",
     "buildError": "Build fehlgeschlagen: {{error}}",
