feat: Add layout block support with grid functionality and enhance editor UI for layout management

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -280,6 +280,11 @@
     "blockDivider": "Trenner",
     "blockBloglist": "Blogliste",
     "blockSection": "Sektion",
+    "blockLayout": "Layout",
+    "layoutColumns": "Spalten",
+    "layoutColumnGap": "Spaltenabstand",
+    "layoutRowGap": "Zeilenabstand",
+    "layoutClassName": "Klasse",
     "sectionBackground": "Hintergrund",
     "sectionTextColor": "Textfarbe",
     "sectionPattern": "Muster",
@@ -292,7 +297,7 @@
     "sectionWidth": "Breite",
     "sectionPadding": "Padding",
     "sectionAlign": "Ausrichtung",
-    "sectionAddBlock": "+ Inneren Block hinzufügen",
+    "sectionAddBlock": "+ Block hinzufügen",
     "bloglistPlaceholder": "Blog-Posts werden hier automatisch aufgelistet",
     "bloglistSettingsLink": "Konfigurieren unter Einstellungen → Bloglist",
     "preview": "Vorschau",
