--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -279,6 +279,11 @@
     "blockDivider": "Divider",
     "blockBloglist": "Bloglist",
     "blockSection": "Section",
+    "blockLayout": "Layout",
+    "layoutColumns": "Columns",
+    "layoutColumnGap": "Col Gap",
+    "layoutRowGap": "Row Gap",
+    "layoutClassName": "Class",
     "sectionBackground": "Background",
     "sectionTextColor": "Text Color",
     "sectionPattern": "Pattern",
@@ -291,7 +296,7 @@
     "sectionWidth": "Width",
     "sectionPadding": "Padding",
     "sectionAlign": "Align",
-    "sectionAddBlock": "+ Add Inner Block",
+    "sectionAddBlock": "+ Add Block",
     "bloglistPlaceholder": "Blog posts will be listed here automatically",
     "bloglistSettingsLink": "Configure in Settings → Bloglist",
     "preview": "Preview",
