feat: Add spacer block functionality with height customization and update UI elements

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -278,6 +278,7 @@
     "blockHeading": "Überschrift",
     "blockList": "Liste",
     "blockDivider": "Trenner",
+    "blockSpacer": "Abstand",
     "blockBloglist": "Blogliste",
     "blockSection": "Sektion",
     "blockLayout": "Layout",
@@ -298,6 +299,7 @@
     "sectionPadding": "Padding",
     "sectionAlign": "Ausrichtung",
     "sectionAddBlock": "+ Block hinzufügen",
+    "spacerHeight": "Höhe",
     "bloglistPlaceholder": "Blog-Posts werden hier automatisch aufgelistet",
     "bloglistSettingsLink": "Konfigurieren unter Einstellungen → Bloglist",
     "preview": "Vorschau",
