--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -277,6 +277,7 @@
     "blockHeading": "Heading",
     "blockList": "List",
     "blockDivider": "Divider",
+    "blockSpacer": "Spacer",
     "blockBloglist": "Bloglist",
     "blockSection": "Section",
     "blockLayout": "Layout",
@@ -297,6 +298,7 @@
     "sectionPadding": "Padding",
     "sectionAlign": "Align",
     "sectionAddBlock": "+ Add Block",
+    "spacerHeight": "Height",
     "bloglistPlaceholder": "Blog posts will be listed here automatically",
     "bloglistSettingsLink": "Configure in Settings → Bloglist",
     "preview": "Preview",
