feat: Implement block selector functionality with UI controls for enhanced content management

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -286,6 +286,8 @@
     "layoutColumnGap": "Spaltenabstand",
     "layoutRowGap": "Zeilenabstand",
     "layoutClassName": "Klasse",
+    "blockSelector": "Selektor",
+    "blockSelectorPlaceholder": ".mein-block oder #hero",
     "sectionBackground": "Hintergrund",
     "sectionTextColor": "Textfarbe",
     "sectionPattern": "Muster",
