feat: Add optimization settings for compression and casing, including UI controls and minification functionality

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -21,6 +21,7 @@
     "header": "Header",
     "footer": "Footer",
     "css": "CSS",
+    "optimizations": "Optimierungen",
     "rss": "RSS",
     "data": "Daten",
     "bloglist": "Bloglist",
@@ -174,6 +175,12 @@
     "archiveRecompileSuccess": "Archiv-Seite erfolgreich rekompiliert!",
     "archiveRecompiling": "Kompiliere...",
     "archiveRecompiled": "Rekompiliert",
+    "optimizationsCompression": "KOMPRIMIERUNG",
+    "optimizationsCompressionEnable": "Komprimierung aktivieren",
+    "optimizationsCompressionHint": "Minifiziert HTML und Inline-CSS beim Veröffentlichen, um Bytes zu sparen.",
+    "optimizationsCasing": "SCHREIBWEISE",
+    "optimizationsLowercaseEnable": "Kleinschreibung erzwingen",
+    "optimizationsLowercaseHint": "Kommt bald. Normalisiert sicheren Output auf Kleinschreibung.",
     "logsSection": "AUDIT-LOGS",
     "logsSearch": "Suche...",
     "logsFilterAll": "Alle Aktionen",
