--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -21,6 +21,7 @@
     "header": "Header",
     "footer": "Footer",
     "css": "CSS",
+    "optimizations": "Optimizations",
     "rss": "RSS",
     "data": "Data",
     "bloglist": "Bloglist",
@@ -173,6 +174,12 @@
     "archiveRecompileSuccess": "Archive page recompiled successfully!",
     "archiveRecompiling": "Compiling...",
     "archiveRecompiled": "Recompiled",
+    "optimizationsCompression": "COMPRESSION",
+    "optimizationsCompressionEnable": "Enable compression",
+    "optimizationsCompressionHint": "Minifies HTML and inline CSS during publish to save bytes.",
+    "optimizationsCasing": "CASING",
+    "optimizationsLowercaseEnable": "Force lowercase output",
+    "optimizationsLowercaseHint": "Coming soon. Will normalize generated output to lowercase where safe.",
     "logsSection": "AUDIT LOGS",
     "logsSearch": "Search...",
     "logsFilterAll": "All actions",
