feat: Replace casing settings with class mangling functionality across the application

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -178,9 +178,9 @@
     "optimizationsCompression": "KOMPRIMIERUNG",
     "optimizationsCompressionEnable": "Komprimierung aktivieren",
     "optimizationsCompressionHint": "Minifiziert HTML und Inline-CSS beim Veröffentlichen, um Bytes zu sparen.",
-    "optimizationsCasing": "SCHREIBWEISE",
-    "optimizationsLowercaseEnable": "Kleinschreibung erzwingen",
-    "optimizationsLowercaseHint": "Kommt bald. Normalisiert sicheren Output auf Kleinschreibung.",
+    "optimizationsClassMangling": "CLASS MANGLING",
+    "optimizationsClassManglingEnable": "Class-Mangling aktivieren",
+    "optimizationsClassManglingHint": "Verkürzt vom Compiler erzeugte Klassennamen für kleinere rohe HTML/CSS-Ausgabe.",
     "logsSection": "AUDIT-LOGS",
     "logsSearch": "Suche...",
     "logsFilterAll": "Alle Aktionen",
