--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -177,9 +177,9 @@
     "optimizationsCompression": "COMPRESSION",
     "optimizationsCompressionEnable": "Enable compression",
     "optimizationsCompressionHint": "Minifies HTML and inline CSS during publish to save bytes.",
-    "optimizationsCasing": "CASING",
-    "optimizationsLowercaseEnable": "Force lowercase output",
-    "optimizationsLowercaseHint": "Coming soon. Will normalize generated output to lowercase where safe.",
+    "optimizationsClassMangling": "CLASS MANGLING",
+    "optimizationsClassManglingEnable": "Enable class mangling",
+    "optimizationsClassManglingHint": "Shortens compiler-generated class names for smaller raw HTML/CSS output.",
     "logsSection": "AUDIT LOGS",
     "logsSearch": "Search...",
     "logsFilterAll": "All actions",
