feat: enhance class mangling optimizations and add mode selection - Updated class mangling settings to include a 'mode' option (safe/aggressive) in various files including index.php and api.php. - Implemented aggressive class mangling for bloglist and pagination classes in compiler.browser.js. - Added UI elements in settings.html for selecting class mangling mode with corresponding translations in de.json and en.json. - Improved CSS for section previews and layout cells in sections.css. - Enhanced JavaScript functionality for padding and margin adjustments in editor.html.

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -181,6 +181,12 @@
     "optimizationsClassMangling": "CLASS MANGLING",
     "optimizationsClassManglingEnable": "Class-Mangling aktivieren",
     "optimizationsClassManglingHint": "Verkürzt vom Compiler erzeugte Klassennamen für kleinere rohe HTML/CSS-Ausgabe.",
+    "optimizationsClassManglingModeLabel": "Mangling-Modus",
+    "optimizationsClassManglingModeSafe": "Sicher",
+    "optimizationsClassManglingModeAggressive": "Aggressiv",
+    "optimizationsClassManglingModeHint": "Sicher verkürzt nur Layout-/Section-Klassen.<br>Aggressiv verkürzt zusätzlich Bloglist- und Pagination-Klassen.",
+    "optimizationsClassManglingModeHintLine1": "Sicher verkürzt nur Layout-/Section-Klassen.",
+    "optimizationsClassManglingModeHintLine2": "Aggressiv verkürzt zusätzlich Bloglist- und Pagination-Klassen.",
     "logsSection": "AUDIT-LOGS",
     "logsSearch": "Suche...",
     "logsFilterAll": "Alle Aktionen",
