--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -180,6 +180,12 @@
     "optimizationsClassMangling": "CLASS MANGLING",
     "optimizationsClassManglingEnable": "Enable class mangling",
     "optimizationsClassManglingHint": "Shortens compiler-generated class names for smaller raw HTML/CSS output.",
+    "optimizationsClassManglingModeLabel": "Mangling mode",
+    "optimizationsClassManglingModeSafe": "Safe",
+    "optimizationsClassManglingModeAggressive": "Aggressive",
+    "optimizationsClassManglingModeHint": "Safe mangles layout/section classes only.<br>Aggressive also mangles bloglist and pagination classes.",
+    "optimizationsClassManglingModeHintLine1": "Safe mangles layout/pattern classes; legacy .section selectors still target section.",
+    "optimizationsClassManglingModeHintLine2": "Aggressive also mangles bloglist and pagination classes.",
     "logsSection": "AUDIT LOGS",
     "logsSearch": "Search...",
     "logsFilterAll": "All actions",
